# PyopenCLOnAMDGPU

./: README.md  main.py  pyproject.toml
analysis/: addition_results.csv  allInOneResults.json  analysis.ipynb  multiplication_results.csv  polynomial_results.csv  subtraction_results.csv
analysis/testDataForAverageTime/: add1st100ktest.json  add1st100millionTest.json  add1st10ktest.json  add1st10millionTest.json  add1st1millionTest.json  add2nd100ktest.json  add2nd100millionTest.json  add2nd10ktest.json  add2nd10millionTest.json  add2nd1millionTest.json  add3rd100ktest.json  add3rd100millionTest.json  add3rd10ktest.json  add3rd10millionTest.json  add3rd1millionTest.json  mul100millionTest.json  mul1st100ktest.json  mul1st10ktest.json  mul1st10millionTest.json  mul1st1millionTest.json  mul1st250millionTest.json  mul2nd100ktest.json  mul2nd100millionTest.json  mul2nd10ktest.json  mul2nd10millionTest.json  mul2nd1millionTest.json  mul2nd250millionTest.json  mul3rd100ktest.json  mul3rd100millionTest.json  mul3rd10ktest.json  mul3rd10millionTest.json  mul3rd1millionTest.json  mul3rd250millionTest.json  sub1st100ktest.json  sub1st100millionTest.json  sub1st10ktest.json  sub1st10millionTest.json  sub1st1millionTest.json  sub2nd100ktest.json  sub2nd100millionTest.json  (+8 more)
analysis/testDataForPoly/: poly100kelements.json  poly100millionElements.json  poly10kelements.json  poly10millionElements.json  poly1millionElements.json  poly250millionElements.json
analysis/testDataWithBatchTimes/: poly250millioELementsCompleteTest.json
src/api/: calculate.py
src/models/: arrayInfo.py
(+2 files in other folders)
