[project]
name = "pyopenclonamdgpu"
version = "0.1.0"
description = "High-performance data processing using PyOpenCL and NumPy"
# uv warned you about this: 
requires-python = ">=3.11" 
dependencies = [
    "numpy>=1.24.0",
    "pyopencl>=2023.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.0.0",
    "tqdm>=4.65.0",
    "polars>=0.19.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ADD THIS PART:
[tool.setuptools.packages.find]
where = ["src"]
